--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://gentle-atoll-11216.herokuapp.com/"
 }
